add portfolio page

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
    const examplesData = {
   design: [
     { title: "Landing", link: "https://vadymdev.com/web-design-ex/ex1/ex1landing.html" },
-    { title: "Portfolio" },
+    { title: "Portfolio", link: "https://vadymdev.com/web-design-ex/ex2/ex2portfolio.html" },
     { title: "Dashboard" }
   ],
   frontend: [
