link ex3 to main page

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   design: [
     { title: "Landing", link: "https://vadymdev.com/web-design-ex/ex1/ex1landing.html" },
     { title: "Portfolio", link: "https://vadymdev.com/web-design-ex/ex2/ex2portfolio.html" },
-    { title: "Dashboard" }
+    { title: "Dashboard", link: "https://vadymdev.com/web-design-ex/ex3/ex3dashboard.html" },
   ],
   frontend: [
     { title: "Animated Menu" },
