create and link ex1fd to main page

--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
     // Examples slider
    const examplesData = {
   design: [
-    { title: "Landing", link: "https://vadymdev.com/web-design-ex/ex1/ex1landing.html" },
-    { title: "Portfolio", link: "https://vadymdev.com/web-design-ex/ex2/ex2portfolio.html" },
-    { title: "Dashboard", link: "https://vadymdev.com/web-design-ex/ex3/ex3dashboard.html" },
+    { title: "Landing", link: "https://vadymdev.com/web-design-ex/ex1wd/ex1landing.html" },
+    { title: "Portfolio", link: "https://vadymdev.com/web-design-ex/ex2wd/ex2portfolio.html" },
+    { title: "Dashboard", link: "https://vadymdev.com/web-design-ex/ex3wd/ex3dashboard.html" },
   ],
   frontend: [
-    { title: "Animated Menu" },
+    { title: "Animated Menu", link: "https://vadymdev.com/frontend-development/ex1fd/ex1animatedmenu.html" },
     { title: "Contact Form" },
     { title: "Product Page" }
   ],
