create and link ex2fd to main page

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   ],
   frontend: [
     { title: "Animated Menu", link: "https://vadymdev.com/frontend-development-ex/ex1fd/ex1animatedmenu.html" },
-    { title: "Contact Form" },
+    { title: "Contact Form", link: "https://vadymdev.com/frontend-development-ex/ex2fd/ex2conactform.html" },
     { title: "Product Page" }
   ],
   ui: [
