--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   frontend: [
     { title: "Animated Menu", link: "https://vadymdev.com/frontend-development-ex/ex1fd/ex1animatedmenu.html" },
     { title: "Contact Form", link: "https://vadymdev.com/frontend-development-ex/ex2fd/ex2contactform.html" },
-    { title: "Product Page" }
+    { title: "Product Page", link: "https://vadymdev.com/frontend-development-ex/ex3fd/ex3productpage.html" }
   ],
   ui: [
     { title: "Dark Theme" },
