ex1ui darktheme added

--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
   frontend: [
     { title: "Animated Menu", link: "https://vadymdev.com/frontend-development-ex/ex1fd/ex1animatedmenu.html" },
     { title: "Contact Form", link: "https://vadymdev.com/frontend-development-ex/ex2fd/ex2contactform.html" },
-    { title: "Product Page", link: "https://vadymdev.com/frontend-development-ex/ex3fd/ex3productpage.html" }
+    { title: "Product Page", link: "https://vadymdev.com/frontend-development-ex/ex3fd/ex3productpage.html" },
   ],
   ui: [
-    { title: "Dark Theme" },
+    { title: "Dark Theme", link: "https://vadymdev.com/UI-improvements-ex/ex1ui/ex1darktheme.html" },
     { title: "Modal Redesign" },
     { title: "Clean Layout" }
   ]
