ex2ui modalredesign added

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   ],
   ui: [
     { title: "Dark Theme", link: "https://vadymdev.com/UI-improvements-ex/ex1ui/ex1darktheme.html" },
-    { title: "Modal Redesign" },
+    { title: "Modal Redesign", link: "https://vadymdev.com/UI-improvements-ex/ex2ui/ex2modalredesign.html" },
     { title: "Clean Layout" }
   ]
 };
