--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   ui: [
     { title: "Dark Theme", link: "https://vadymdev.com/UI-improvements-ex/ex1ui/ex1darktheme.html" },
     { title: "Modal Redesign", link: "https://vadymdev.com/UI-improvements-ex/ex2ui/ex2modalredesign.html" },
-    { title: "Clean Layout" }
+    { title: "Clean Layout", link: "https://vadymdev.com/UI-improvements-ex/ex3ui/ex3cleanlayout.html" }
   ]
 };
 
